experimental/report/testdata/suggestions.yaml.fancy.txt
remark: let protocompile pick a syntax for you
  --> foo.proto:1:1
  help: delete this
   |
 1 | - syntax = "proto3";

remark: let protocompile pick a syntax for you
  --> foo.proto:1:10
  help: delete this
   |
 1 | - syntax = "proto3";
 1 | + syntax = ;

warning: services should have a `Service` suffix
  --> foo.proto:5:9
   |
 5 | service Foo {
   |         ^^^
  help: change the name to `FooService`
   |
 5 | service FooService {
   |            +++++++

error: missing (...) around return type
  --> foo.proto:6:31
   |
 6 |   rpc Get(GetRequest) returns GetResponse
   |                               ^^^^^^^^^^^
  help: add `(...)` around the type
   |
 6 |   rpc Get(GetRequest) returns (GetResponse)
   |                               +           +

error: method options must go in a block
  --> foo.proto:7:45
   |
 7 |   rpc Put(PutRequest) returns (PutResponse) [foo = bar];
   |                                             ^^^^^^^^^^^
   |                                              |
   |                                              compact options not allowed here
   |
  help: use `option` settings inside of the method body
   |
 7 | -   rpc Put(PutRequest) returns (PutResponse) [foo = bar];
 7 | +   rpc Put(PutRequest) returns (PutResponse) {
 8 | +     option foo = bar;
 9 | +   }

error: delete some stuff
  --> foo.proto:5:1
  help:
   |
 5 | - service Foo {
 6 |     rpc Get(GetRequest) returns GetResponse
 7 |     rpc Put(PutRequest) returns (PutResponse) [foo = bar];
 8 | - }
 9 | -
 7 | + }

error: delete this method
  --> foo.proto:5:1
  help:
   |
 7 | -   rpc Put(PutRequest) returns (PutResponse) [foo = bar];
 8 | - }
 7 | +   }

encountered 4 errors and 1 warning
